Updated versioning to date format

--- a/project/pom.xml
+++ b/project/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.jclapel.banksystem</groupId>
   <artifactId>project</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>20211111</version>
 
   <name>project</name>
   <!-- FIXME change it to the project's website -->
