--- a/project/pom.xml
+++ b/project/pom.xml
@@ -32,6 +32,15 @@
       <artifactId>gson</artifactId>
       <version>2.8.9</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <!-- use 2.9.1 for Java 7 projects -->
+      <version>3.21.0</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
