--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.example</groupId>
+    <groupId>com.jclapel.banksystem</groupId>
     <artifactId>JC_LAPEL</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>JC_LAPEL</name>
@@ -137,4 +137,3 @@
         </plugins>
     </build>
 </project>
-
