--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>5.7.1</junit.version>
+		<mongodb-driver-sync.version>4.4.0</mongodb-driver-sync.version>
     </properties>
 
     <dependencies>
@@ -89,10 +90,10 @@
 		</dependency>
 		
 		<dependency>
-			<groupId>org.mongodb</groupId>
-			<artifactId>mongo-java-driver</artifactId>
-			<version>2.12.3</version>
-		</dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-sync</artifactId>
+            <version>${mongodb-driver-sync.version}</version>
+        </dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.mongodb/bson -->
 		<dependency>
