--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,13 @@
 			<type>pom</type>
 		</dependency>
 
-	</dependencies>
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongodb-driver-sync</artifactId>
+			<version>4.4.0</version>
+		</dependency>
+
+</dependencies>
 
 	<build>
 		<!-- <pluginManagement> lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
